[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/enemies/bosses/electro-bird1.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/boss/boss_2.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://scripts/enemies/boss/behavior/is_active.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=6]
[ext_resource path="res://sprites/enemies/mobs_death.tres" type="Animation" id=7]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 106.66

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 1, 0 ]
}

[sub_resource type="Animation" id=3]
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 188.227, 269.69 )

[sub_resource type="CircleShape2D" id=5]
radius = 42.2058

[node name="boss_2" type="RigidBody2D"]
collision_layer = 4
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -13.4847, 7.49151 )
scale = Vector2( -0.497763, 0.444953 )
texture = ExtResource( 1 )
flip_h = true
hframes = 5

[node name="permanent" type="AnimationPlayer" parent="Sprite"]
anims/idle = SubResource( 6 )
anims/mobs_death = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/perf_damage = SubResource( 3 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree"]
script = ExtResource( 8 )

[node name="is_active" type="Node" parent="BehaviorTree/BehaviorSequence"]
script = ExtResource( 5 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree/BehaviorSequence"]
script = ExtResource( 3 )

[node name="BehaviorSequence2" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 8 )

[node name="is_hit" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 10 )

[node name="take_dmg" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 6 )

[node name="attack" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 9 )

[node name="activation_trigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="activation_trigger"]
position = Vector2( -232.314, 161.092 )
shape = SubResource( 4 )

[node name="FireTimer" type="Timer" parent="."]

[node name="projectile_spawn" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="projectile_spawn"]
position = Vector2( 0.903687, 138.101 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="activation_trigger" to="." method="_on_activation_trigger_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_AttackTimer_timeout"]
